--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -10,7 +10,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "This notebook is an assignment for the Data Science Course "
@@ -21,10 +21,11 @@
    "metadata": {},
    "source": [
     "### <b>Objectives:</b>\n",
-    "* List of the popular languages\n",
-    "* List of some commonly libraries\n",
-    "* List OF Data Scientists Tools\n",
-    "* Examples\n",
+    "* Comments code cells\n",
+    "* Create markdown cells\n",
+    "* Create order lists\n",
+    "* Create unorder lists\n",
+    "* Format markdown cells\n",
     "    \n"
    ]
   },
@@ -65,9 +66,11 @@
     "\n",
     "| Data Science Tools | \n",
     "| :---: |\n",
-    "| Haddop |\n",
-    "| Spark |\n",
-    "| Neo4J |\n"
+    "| Spyder |\n",
+    "| Zeppelin |\n",
+    "| Jupyter Notebooks |\n",
+    "| R Studio |\n",
+    "| Anaconda |\n"
    ]
   },
   {
@@ -79,24 +82,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.0 hours\n"
-     ]
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This will convert 200 minutes to hours by diving by 60\n",
-    "minutes = 200\n",
-    "hours = round(minutes/60,0)\n",
-    "print(str(hours) + \" hours\")"
+    "# This a simple arithmetic expression to multiply tehn add integers\n",
+    "(3*4)+5"
    ]
   },
   {
@@ -110,15 +114,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.0 hours\n"
+      "3.33\n"
      ]
     }
    ],
    "source": [
     "# This will convert 200 minutes to hours by diving by 60\n",
     "minutes = 200\n",
-    "hours = round(minutes/60,0)\n",
-    "print(str(hours) + \" hours\")"
+    "hours = round(minutes/60,2)\n",
+    "print(hours)"
    ]
   },
   {
